<resources>
    <string name="app_name">智能管家</string>
    <string name="test_setting">设置</string>
    <string name="splash">智能管家</string>
    <string name="setting">设置</string>
    <string name="butler">服务管家</string>
    <string name="girl">美女社区</string>
    <string name="user">个人中心</string>
    <string name="wechat">微信精选</string>
    <string name="guide">引导页</string>
    <string name="into_home">进入主页</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="age">请输入年龄</string>
    <string name="desc">请输入简介</string>
    <string name="gender_female">女</string>
    <string name="gender_male">男</string>
    <string name="hold_pwd">请输入密码</string>
    <string name="hold_email">请输入邮箱</string>
    <string name="hold_repwd">请重复密码</string>
    <string name="hold_username">请输入用户名</string>
    <string name="regok_tip">注册成功需要前往邮箱验证，否则无法登陆</string>
    <string name="loading">加载中...</string>
    <string name="update_pass">修改密码</string>
    <string name="forget_pass">忘记密码</string>
    <string name="update_pass_btn">修改密码</string>
    <string name="forget_pass_btn">忘记密码</string>
    <string name="confirm_update_btn">确定修改</string>
    <string name="user_logout">退出登录</string>
    <string name="flow_query">物流查询</string>
    <string name="user_name">姓名</string>
    <string name="user_desc">简介</string>
    <string name="user_age">年龄</string>
    <string name="edit_user_info">编辑资料</string>
    <string name="user_sex">性别</string>
    <string name="belong_query">归属地查询</string>
    <string name="take_photo">拍照</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_picture">图库</string>
</resources>
