<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hold_username"
        android:hint="@string/hold_username"
        android:inputType="text"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="请输入年龄"
        android:hint="@string/age"
        android:inputType="number"
        tools:ignore="UnusedAttribute" />


    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc"
        android:inputType="text"
        tools:ignore="Autofill" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/gender_female"
            tools:ignore="RtlHardcoded" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hold_pwd"
        android:hint="@string/hold_pwd"
        android:inputType="textPassword"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/et_repwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hold_repwd"
        android:hint="@string/hold_repwd"
        android:inputType="textPassword"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hold_email"
        android:hint="@string/hold_email"
        android:inputType="textEmailAddress"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regok_tip"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:textColor="@android:color/white" />

</LinearLayout>
